@@ -1,6 +1,6 @@
 MD5 b2f5b785a20a1b356e58629612c0aab5 amanda-2.4.4.ebuild 8488
-MD5 f376bcdf8ea3c00e0fa0a359ae85aac4 amanda-2.4.4-r1.ebuild 11277
-MD5 3f994b4f0c3d0b2a2cfccb164876d661 ChangeLog 1304
+MD5 ce62d43fec8c669a9e462c87071b08db amanda-2.4.4-r1.ebuild 11277
+MD5 5f810b2498df02e883d204547428af27 ChangeLog 1419
 MD5 b21569120561b1c58ad59e93ce6df732 files/amanda-devfs 216
 MD5 fe28f64731a2dbf85f76b6f38942e032 files/example_disklist 55
 MD5 a98390eb2ab16398b7332c42560c190f files/amanda-cron 419
