@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/amanda
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/amanda/Attic/ChangeLog,v 1.2 2003/07/08 07:23:48 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/amanda/Attic/ChangeLog,v 1.3 2003/07/08 20:22:46 robbat2 Exp $
+
+  08 Jul 2003; Robin Johnson <robbat2@gentoo.org> amanda-2.4.4-r1.ebuild:
+  Fix userpriv+sandbox issue in ebuild.
 
 *amanda-2.4.4-r1 (08 Jul 2003)
 
